--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.20.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.5",
+    "cloudinary": "^2.4.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
